sql/sql_derived.cc
@@ -1091,7 +1091,7 @@ bool mysql_derived_fill(THD *thd, LEX *lex, TABLE_LIST *derived)
       res= derived->fill_recursive(thd);
     }
   }
-  else if (unit->is_union())
+  else if (unit->is_union() || unit->fake_select_lex)
   {
     // execute union without clean up
     res= unit->exec();
